fix: play/pause button not showing

--- a/user.css
+++ b/user.css
@@ -1603,28 +1603,3 @@ option {
   background-color: var(--spice-text) !important;
   -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_play_24_filled.svg');
 }
-
-.main-playButton-PlayButton[aria-label="Play"],
-.main-playPauseButton-button[aria-label="Play"],
-.main-trackList-rowPlayPauseButton[aria-label="Play"] {
-  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_play_24_filled.svg');
-  background-color: var(--spice-text) !important; 
-}
-
-.main-playButton-PlayButton[aria-label="Pause"],
-.main-playPauseButton-button[aria-label="Pause"],
-.main-trackList-rowPlayPauseButton[aria-label="Pause"] {
-  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_pause_16_filled.svg');
-  background-color: var(--spice-text) !important;
-}
-
-.gro_tSi7cwspepH0as03 {
-  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_play_24_filled.svg');
-  background-color: var(--spice-text) !important; 
-  padding: 0px !important;
-}
-
-.gro_tSi7cwspepH0as03[aria-label="Pause"] {
-  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_pause_16_filled.svg') !important;
-  background-color: var(--spice-text) !important;
-}
